samples/_failures_safe/1761040700_5c883a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bad71b5.c: In function ‘main’:
./samples/SAFE/__tmp_2bad71b5.c:143:5: error: expected declaration or statement at end of input
  143 |     analyze_logs(logs, log_count);
      |     ^~~~~~~~~~~~
